--- a/DM2240_Lab/DM2240_Lab.vcxproj
+++ b/DM2240_Lab/DM2240_Lab.vcxproj
@@ -92,6 +92,7 @@
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="GameModeState.cpp" />
     <ClCompile Include="GameStateManager.cpp" />
+    <ClCompile Include="Grid.cpp" />
     <ClCompile Include="IntroState.cpp" />
     <ClCompile Include="LevelSelectState.cpp" />
     <ClCompile Include="main.cpp" />
@@ -117,6 +118,7 @@
     <ClInclude Include="GameModeState.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="GameStateManager.h" />
+    <ClInclude Include="Grid.h" />
     <ClInclude Include="IntroState.h" />
     <ClInclude Include="LevelSelectState.h" />
     <ClInclude Include="main.h" />
