--- a/DM2240_Lab/DM2240_Lab.vcxproj.filters
+++ b/DM2240_Lab/DM2240_Lab.vcxproj.filters
@@ -117,6 +117,12 @@
     <ClCompile Include="BG.cpp">
       <Filter>UI</Filter>
     </ClCompile>
+    <ClCompile Include="InstructionState.cpp">
+      <Filter>GameState</Filter>
+    </ClCompile>
+    <ClCompile Include="CreditsState.cpp">
+      <Filter>GameState</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -202,6 +208,12 @@
     </ClInclude>
     <ClInclude Include="BG.h">
       <Filter>UI</Filter>
+    </ClInclude>
+    <ClInclude Include="InstructionState.h">
+      <Filter>GameState</Filter>
+    </ClInclude>
+    <ClInclude Include="CreditsState.h">
+      <Filter>GameState</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
