--- a/DM2240_Lab/DM2240_Lab.vcxproj.filters
+++ b/DM2240_Lab/DM2240_Lab.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClCompile Include="BG.cpp">
       <Filter>UI</Filter>
     </ClCompile>
+    <ClCompile Include="SettingsState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -202,6 +205,12 @@
     </ClInclude>
     <ClInclude Include="BG.h">
       <Filter>UI</Filter>
+    </ClInclude>
+    <ClInclude Include="SettingsState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Setting.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
